[package]
name = "yuzhi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yz"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
console = "0.14.1"
tokio = { version = "1", features = ["full"] }